[+] hunter library :  build and dependencies

--- a/Module/Game/Hunter/CMakeLists.txt
+++ b/Module/Game/Hunter/CMakeLists.txt
@@ -1,10 +1,27 @@
 # Configuration
-set(CORE ${CMAKE_SOURCE_DIR}/Core)
+set(CORE "${CMAKE_SOURCE_DIR}/Core")
+set(FACTORY "./Factory")
+set(ENTITY "./Factory/Entity")
+set(COMPONENTS "./Factory/Components")
+set(SYSTEM "./Factory/System")
+set(ENGINE "${CMAKE_SOURCE_DIR}/Core/Engine")
 
 # Output
 add_library(hunter SHARED 
     hunter.hpp
     hunter.cpp
+    ${ENGINE}/component.hpp
+    ${ENGINE}/coordinator.hpp
+    ${ENGINE}/entity.hpp
+    ${ENGINE}/system.hpp
+    ${FACTORY}/abstract.hpp
+    ${FACTORY}/construct.hpp
+    ${ENTITY}/type.hpp
+    ${ENTITY}/target.hpp
+    ${COMPONENTS}/force.hpp
+    ${COMPONENTS}/position.hpp
+    ${COMPONENTS}/transform.hpp
+    ${SYSTEM}/movable.hpp
 )
 
 # Project compilation flags
@@ -18,6 +35,11 @@ target_link_libraries(
 target_include_directories(hunter PRIVATE 
     ${CORE}/App/
     ${CORE}/Interface/
+    ${ENGINE}/
+    ${FACTORY}/
+    ${ENTITY}/
+    ${COMPONENTS}/
+    ${SYSTEM}/
 )
 
 # Install project
